// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactMap Configuration Should match existing snapshot when given configurations. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "name": "sample slider",
            "onChange": [MockFunction],
            "type": "SLIDER",
            "values": Object {
              "current": 5,
              "max": 10,
              "min": 0,
            },
          },
          Object {
            "current": "yes",
            "name": "sample radio",
            "onChange": [MockFunction],
            "options": Array [
              "yes",
              "no",
            ],
            "type": "RADIO",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [],
            "subtitle": "(from PDB structure)",
            "text": Array [],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={70}
      secondaryStructures={Array []}
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when a single point are hovered. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [
              Object {
                "dist": 1.3,
                "i": 41,
                "j": 52,
              },
              Object {
                "dist": 2.4,
                "i": 50,
                "j": 56,
              },
            ],
            "subtitle": "(from PDB structure)",
            "text": Array [
              "(41, 52)",
              "(50, 56)",
            ],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [
                "#ff8800",
                "#ff8800",
              ],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [
              Object {
                "i": 41,
                "j": 41,
              },
            ],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={77}
      secondaryStructures={
        Array [
          Array [
            Object {
              "end": 31,
              "label": "C",
              "length": 2,
              "start": 30,
            },
          ],
        ]
      }
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when given basic data. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [
              Object {
                "dist": 1.3,
                "i": 41,
                "j": 52,
              },
              Object {
                "dist": 2.4,
                "i": 50,
                "j": 56,
              },
            ],
            "subtitle": "(from PDB structure)",
            "text": Array [
              "(41, 52)",
              "(50, 56)",
            ],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={77}
      secondaryStructures={
        Array [
          Array [
            Object {
              "end": 31,
              "label": "C",
              "length": 2,
              "start": 30,
            },
          ],
        ]
      }
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when given data with a PDB. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Known Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Known Structure Contact",
            "nodeSize": 4,
            "points": Array [
              Object {
                "A_i": "N",
                "A_j": "I",
                "dist": 1.3,
                "i": 1,
                "j": 10,
              },
            ],
            "subtitle": "(from PDB structure)",
            "text": Array [
              "(1N, 10I)",
            ],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={70}
      secondaryStructures={Array []}
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when given data with amino acids. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [
              Object {
                "A_i": "N",
                "A_j": "I",
                "dist": 1.3,
                "i": 1,
                "j": 10,
              },
            ],
            "subtitle": "(from PDB structure)",
            "text": Array [
              "(1N, 10I)",
            ],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={70}
      secondaryStructures={Array []}
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when given empty data. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [],
            "subtitle": "(from PDB structure)",
            "text": Array [],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={70}
      secondaryStructures={Array []}
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when given no data. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [],
            "subtitle": "(from PDB structure)",
            "text": Array [],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={70}
      secondaryStructures={Array []}
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when multiple points are hovered. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [
              Object {
                "dist": 1.3,
                "i": 41,
                "j": 52,
              },
              Object {
                "dist": 2.4,
                "i": 50,
                "j": 56,
              },
            ],
            "subtitle": "(from PDB structure)",
            "text": Array [
              "(41, 52)",
              "(50, 56)",
            ],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [
                "#ff8800",
                "#ff8800",
              ],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [
              Object {
                "i": 41,
                "j": 52,
              },
            ],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={77}
      secondaryStructures={
        Array [
          Array [
            Object {
              "end": 31,
              "label": "C",
              "length": 2,
              "start": 30,
            },
          ],
        ]
      }
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match existing snapshot when multiple points are selected. 1`] = `
<ComponentCard
  componentName="Contact Map"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={false}
  isFullPage={false}
  padding={0}
  showSettings={false}
  width="525px"
>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <ContactMapChart
      candidateResidues={Array []}
      configurations={
        Array [
          Object {
            "name": "Clear Selections",
            "onClick": [Function],
            "type": "BUTTON",
          },
          Object {
            "id": "node-size-slider-0",
            "name": "Node size for Unknown Structure Contact",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 4,
              "max": 20,
              "min": 1,
            },
          },
          Object {
            "id": "node-size-slider-1",
            "name": "Node size for Selected Residue Pairs",
            "onChange": [Function],
            "type": "SLIDER",
            "values": Object {
              "current": 6,
              "max": 20,
              "min": 1,
            },
          },
        ]
      }
      contactData={
        Array [
          Object {
            "hoverinfo": "text",
            "marker": Object {
              "colorscale": Array [
                Array [
                  0,
                  "rgb(12,50,102)",
                ],
                Array [
                  0.1,
                  "rgb(17,83,150)",
                ],
                Array [
                  0.2,
                  "rgb(40,114,175)",
                ],
                Array [
                  0.3,
                  "rgb(71,147,193)",
                ],
                Array [
                  0.4,
                  "rgb(111,175,209)",
                ],
                Array [
                  0.5,
                  "rgb(160,202,222)",
                ],
                Array [
                  0.6,
                  "rgb(200,219,237)",
                ],
                Array [
                  0.7,
                  "rgb(224,235,246)",
                ],
                Array [
                  0.8,
                  "rgb(247,251,255)",
                ],
                Array [
                  0.9,
                  "rgb(249,253,255)",
                ],
                Array [
                  1,
                  "rgb(255,255,255)",
                ],
              ],
            },
            "mode": "lines+markers",
            "name": "Unknown Structure Contact",
            "nodeSize": 4,
            "points": Array [
              Object {
                "dist": 1.3,
                "i": 41,
                "j": 52,
              },
              Object {
                "dist": 2.4,
                "i": 50,
                "j": 56,
              },
            ],
            "subtitle": "(from PDB structure)",
            "text": Array [
              "(41, 52)",
              "(50, 56)",
            ],
          },
          Object {
            "hoverinfo": "none",
            "marker": Object {
              "color": Array [
                "#ff8800",
                "#ff8800",
                "#ff8800",
                "#ff8800",
                "#ff8800",
                "#ff8800",
              ],
              "line": Object {
                "color": "#ff8800",
                "width": 3,
              },
              "symbol": "circle-open",
            },
            "mode": "lines+markers",
            "name": "Selected Residue Pairs",
            "nodeSize": 6,
            "points": Array [
              Object {
                "i": 41,
                "j": 52,
              },
              Object {
                "dist": 0,
                "i": 41,
                "j": 52,
              },
              Object {
                "dist": 0,
                "i": 50,
                "j": 56,
              },
            ],
            "subtitle": "",
          },
        ]
      }
      dataTransformFn={[Function]}
      height="100%"
      legendModifiers={
        Object {
          "y": -0.4,
        }
      }
      marginModifiers={
        Object {
          "b": 65,
          "l": 65,
        }
      }
      onClickCallback={[Function]}
      onHoverCallback={[Function]}
      onSelectedCallback={[Function]}
      onUnHoverCallback={[Function]}
      range={77}
      secondaryStructures={
        Array [
          Array [
            Object {
              "end": 31,
              "label": "C",
              "length": 2,
              "start": 30,
            },
          ],
        ]
      }
      selectedSecondaryStructures={
        Array [
          Array [],
        ]
      }
      selectedSecondaryStructuresColor="#feb83f"
      showConfigurations={true}
      width="100%"
    />
  </div>
</ComponentCard>
`;

exports[`ContactMap Snapshots Should match snapshot when locked residues are added. 1`] = `
<ContactMapClass
  addHoveredResidues={[Function]}
  addHoveredSecondaryStructure={[Function]}
  addSelectedSecondaryStructure={[Function]}
  candidateResidues={Array []}
  configurations={Array []}
  data={
    Object {
      "couplingScores": CouplingContainer {
        "colCounter": 0,
        "contacts": Array [
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "dist": 1.3,
              "i": 41,
              "j": 52,
            },
          ],
          Array [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "dist": 20.4,
              "i": 42,
              "j": 50,
            },
          ],
          undefined,
          Array [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "dist": 1.3,
              "i": 44,
              "j": 45,
            },
          ],
          Array [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "dist": 1.3,
              "i": 45,
              "j": 46,
            },
          ],
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "dist": 2.4,
              "i": 50,
              "j": 56,
            },
          ],
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "dist": 1.3,
              "i": 56,
              "j": 57,
            },
          ],
        ],
        "getCouplingScore": [Function],
        "includes": [Function],
        "indexRange": Object {
          "max": 57,
          "min": 1,
        },
        "rowCounter": 0,
        "totalStoredContacts": 6,
      },
      "secondaryStructures": Array [
        Array [
          Object {
            "end": 31,
            "label": "C",
            "length": 2,
            "start": 30,
          },
        ],
      ],
    }
  }
  enableSliders={true}
  formattedPoints={Array []}
  height="100%"
  highlightColor="#ff8800"
  hoveredResidues={Array []}
  hoveredSecondaryStructures={Array []}
  isDataLoading={false}
  lockedResiduePairs={
    Map {
      "8" => Array [
        8,
      ],
      "37,46" => Array [
        37,
        46,
      ],
    }
  }
  observedColor="#0000ff"
  removeAllLockedResiduePairs={[Function]}
  removeHoveredResidues={[Function]}
  removeHoveredSecondaryStructure={[Function]}
  removeSecondaryStructure={[Function]}
  selectedSecondaryStructures={Array []}
  showConfigurations={true}
  toggleLockedResiduePair={[Function]}
  width="100%"
>
  <ComponentCard
    componentName="Contact Map"
    frameHeight={0}
    frameWidth={0}
    headerHeight={32}
    height="525px"
    iconSrc="assets/icons/spring-icon.png"
    isFramedComponent={false}
    isFullPage={false}
    padding={0}
    showSettings={false}
    width="525px"
  >
    <Card
      centered={true}
      className="bioblocks-component-card"
      style={
        Object {
          "height": "525px",
          "maxWidth": "unset",
          "padding": "0 0 5px 5px",
          "width": "525px",
        }
      }
    >
      <div
        className="ui centered card bioblocks-component-card"
        onClick={[Function]}
        style={
          Object {
            "height": "525px",
            "maxWidth": "unset",
            "padding": "0 0 5px 5px",
            "width": "525px",
          }
        }
      >
        <Menu
          secondary={true}
          style={
            Object {
              "height": 32,
              "margin": 0,
            }
          }
        >
          <div
            className="ui secondary menu"
            style={
              Object {
                "height": 32,
                "margin": 0,
              }
            }
          >
            <MenuItem
              fitted="horizontally"
              position="left"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              <div
                className="left horizontally fitted item"
                onClick={[Function]}
                style={
                  Object {
                    "margin": 0,
                  }
                }
              >
                <img
                  alt="component icon"
                  src="assets/icons/spring-icon.png"
                  style={
                    Object {
                      "height": "32px",
                      "padding": "2px",
                      "width": "32px",
                    }
                  }
                />
                Contact Map
              </div>
            </MenuItem>
            <MenuItem
              fitted="horizontally"
              position="right"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              <div
                className="right horizontally fitted item"
                onClick={[Function]}
                style={
                  Object {
                    "margin": 0,
                  }
                }
              >
                <Icon
                  as="i"
                  name="expand arrows alternate"
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="expand arrows alternate icon"
                    onClick={[Function]}
                  />
                </Icon>
              </div>
            </MenuItem>
          </div>
        </Menu>
        <div
          style={
            Object {
              "height": "90%",
              "width": "100%",
            }
          }
        >
          <ContactMapChart
            candidateResidues={Array []}
            configurations={
              Array [
                Object {
                  "name": "Clear Selections",
                  "onClick": [Function],
                  "type": "BUTTON",
                },
                Object {
                  "id": "node-size-slider-0",
                  "name": "Node size for Unknown Structure Contact",
                  "onChange": [Function],
                  "type": "SLIDER",
                  "values": Object {
                    "current": 4,
                    "max": 20,
                    "min": 1,
                  },
                },
                Object {
                  "id": "node-size-slider-1",
                  "name": "Node size for Selected Residue Pairs",
                  "onChange": [Function],
                  "type": "SLIDER",
                  "values": Object {
                    "current": 6,
                    "max": 20,
                    "min": 1,
                  },
                },
              ]
            }
            contactData={
              Array [
                Object {
                  "hoverinfo": "text",
                  "marker": Object {
                    "colorscale": Array [
                      Array [
                        0,
                        "rgb(12,50,102)",
                      ],
                      Array [
                        0.1,
                        "rgb(17,83,150)",
                      ],
                      Array [
                        0.2,
                        "rgb(40,114,175)",
                      ],
                      Array [
                        0.3,
                        "rgb(71,147,193)",
                      ],
                      Array [
                        0.4,
                        "rgb(111,175,209)",
                      ],
                      Array [
                        0.5,
                        "rgb(160,202,222)",
                      ],
                      Array [
                        0.6,
                        "rgb(200,219,237)",
                      ],
                      Array [
                        0.7,
                        "rgb(224,235,246)",
                      ],
                      Array [
                        0.8,
                        "rgb(247,251,255)",
                      ],
                      Array [
                        0.9,
                        "rgb(249,253,255)",
                      ],
                      Array [
                        1,
                        "rgb(255,255,255)",
                      ],
                    ],
                  },
                  "mode": "lines+markers",
                  "name": "Unknown Structure Contact",
                  "nodeSize": 4,
                  "points": Array [
                    Object {
                      "dist": 1.3,
                      "i": 41,
                      "j": 52,
                    },
                    Object {
                      "dist": 2.4,
                      "i": 50,
                      "j": 56,
                    },
                  ],
                  "subtitle": "(from PDB structure)",
                  "text": Array [
                    "(41, 52)",
                    "(50, 56)",
                  ],
                },
                Object {
                  "hoverinfo": "none",
                  "marker": Object {
                    "color": Array [],
                    "line": Object {
                      "color": "#ff8800",
                      "width": 3,
                    },
                    "symbol": "circle-open",
                  },
                  "mode": "lines+markers",
                  "name": "Selected Residue Pairs",
                  "nodeSize": 6,
                  "points": Array [],
                  "subtitle": "",
                },
              ]
            }
            dataTransformFn={[Function]}
            height="100%"
            legendModifiers={
              Object {
                "y": -0.4,
              }
            }
            marginModifiers={
              Object {
                "b": 65,
                "l": 65,
              }
            }
            onClickCallback={[Function]}
            onHoverCallback={[Function]}
            onSelectedCallback={[Function]}
            onUnHoverCallback={[Function]}
            range={77}
            secondaryStructures={
              Array [
                Array [
                  Object {
                    "end": 31,
                    "label": "C",
                    "length": 2,
                    "start": 30,
                  },
                ],
              ]
            }
            selectedSecondaryStructures={
              Array [
                Array [],
              ]
            }
            selectedSecondaryStructuresColor="#feb83f"
            showConfigurations={true}
            width="100%"
          >
            <PlotlyChart
              candidateResidues={Array []}
              config={Object {}}
              data={
                Array [
                  Object {
                    "hoverinfo": "text",
                    "marker": Object {
                      "color": Array [
                        "1.3",
                        "2.4",
                        "1.3",
                        "2.4",
                      ],
                      "colorscale": Array [
                        Array [
                          0,
                          "rgb(12,50,102)",
                        ],
                        Array [
                          0.1,
                          "rgb(17,83,150)",
                        ],
                        Array [
                          0.2,
                          "rgb(40,114,175)",
                        ],
                        Array [
                          0.3,
                          "rgb(71,147,193)",
                        ],
                        Array [
                          0.4,
                          "rgb(111,175,209)",
                        ],
                        Array [
                          0.5,
                          "rgb(160,202,222)",
                        ],
                        Array [
                          0.6,
                          "rgb(200,219,237)",
                        ],
                        Array [
                          0.7,
                          "rgb(224,235,246)",
                        ],
                        Array [
                          0.8,
                          "rgb(247,251,255)",
                        ],
                        Array [
                          0.9,
                          "rgb(249,253,255)",
                        ],
                        Array [
                          1,
                          "rgb(255,255,255)",
                        ],
                      ],
                      "size": 4,
                    },
                    "mode": "markers",
                    "name": "Unknown Structure Contact (from PDB structure)",
                    "text": Array [
                      "(41, 52)",
                      "(50, 56)",
                      "(52, 41)",
                      "(56, 50)",
                    ],
                    "type": "scattergl",
                    "x": Array [
                      41,
                      50,
                      52,
                      56,
                    ],
                    "y": Array [
                      52,
                      56,
                      41,
                      50,
                    ],
                    "z": Array [
                      1.3,
                      2.4,
                      1.3,
                      2.4,
                    ],
                  },
                  Object {
                    "hoverinfo": "none",
                    "marker": Object {
                      "color": Array [],
                      "line": Object {
                        "color": "#ff8800",
                        "width": 3,
                      },
                      "size": 6,
                      "symbol": "circle-open",
                    },
                    "mode": "markers",
                    "name": "Selected Residue Pairs ",
                    "text": Array [],
                    "type": "scattergl",
                    "x": Array [],
                    "y": Array [],
                    "z": Array [],
                  },
                ]
              }
              dataTransformFn={[Function]}
              height="100%"
              layout={
                Object {
                  "legend": Object {
                    "orientation": "h",
                    "y": -0.4,
                    "yanchor": "bottom",
                  },
                  "margin": Object {
                    "b": 65,
                    "l": 65,
                  },
                  "showlegend": false,
                  "xaxis": Object {
                    "autorange": true,
                    "fixedrange": true,
                    "nticks": 10,
                    "range": Array [
                      0,
                      33000,
                    ],
                    "rangemode": "nonnegative",
                    "showline": true,
                    "tickmode": "auto",
                    "title": "Residue #",
                  },
                  "yaxis": Object {
                    "autorange": "reversed",
                    "fixedrange": true,
                    "nticks": 10,
                    "range": Array [
                      0,
                      33000,
                    ],
                    "rangemode": "nonnegative",
                    "showline": true,
                    "tickmode": "auto",
                    "title": "Residue #",
                  },
                }
              }
              onClickCallback={[Function]}
              onHoverCallback={[Function]}
              onSelectedCallback={[Function]}
              onUnHoverCallback={[Function]}
              secondaryStructures={
                Array [
                  Array [
                    Object {
                      "end": 31,
                      "label": "C",
                      "length": 2,
                      "start": 30,
                    },
                  ],
                ]
              }
              selectedSecondaryStructures={
                Array [
                  Array [],
                ]
              }
              selectedSecondaryStructuresColor="#feb83f"
              showLoader={true}
              width="100%"
            >
              <Dimmer
                active={false}
              >
                <DimmerInner
                  active={false}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <div
                          class="ui dimmer"
                          style=""
                        >
                          <div
                            class="content"
                          >
                            <div
                              class="ui loader"
                            />
                          </div>
                        </div>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <div
                            class="ui dimmer"
                            style=""
                          >
                            <div
                              class="content"
                            >
                              <div
                                class="ui loader"
                              />
                            </div>
                          </div>,
                        }
                      }
                    >
                      <div
                        className="ui dimmer"
                        onClick={[Function]}
                      >
                        <div
                          className="content"
                        >
                          <Loader>
                            <div
                              className="ui loader"
                            />
                          </Loader>
                        </div>
                      </div>
                    </RefFindNode>
                  </Ref>
                </DimmerInner>
              </Dimmer>
              <div
                className="plotly-chart"
                style={
                  Object {
                    "height": "100%",
                    "marginBottom": 5,
                    "width": "100%",
                  }
                }
              />
            </PlotlyChart>
          </ContactMapChart>
        </div>
      </div>
    </Card>
  </ComponentCard>
</ContactMapClass>
`;
